--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,17 +8,25 @@
   <title>plaster</title>
   <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
   <div class="container">
     <div class="header">
       <div class="title">
-        <div class="header-logo"></div>
-        <div class="header-title-btn"></div>
-        <div class="header-phone"></div>
+        <div class="header-logo">
+          <div class="header-logo-img1"></div>
+          <div class="header-logo-img2"></div>
+        </div>
+        <div class="header-title-btn">Заказать обратный звонок</div>
+        <div class="header-phone">
+          <div class="header-phone-img"></div>
+          <div class="header-phone-text">+7 (499) 647-63-47</div>
+        </div>
       </div>
+      <div class="gray_line"></div>
       <div class="menu">
-        <ul>
-          <li>Главная</li>
+        <ul class="menu-list">
+          <li class="menu-list-item">Главная</li>
           <li>Штукатурка фасадов</li>
           <li>Галерея</li>
           <li>Карта объектов</li>
@@ -25,9 +34,172 @@
           <li>О компании</li>
           <li>Контакты</li>
         </ul>
-        <div class="header-menu-btn"></div>
+        <div class="menu-btn">
+          <div class="menu-btn-img"></div>
+          <div class="menu-btn-text">Калькулятор</div>
+        </div>
+      </div>
+      <div class="gray_line"></div>
+    </div>
+    <div class="gallary">
+      <div class="gallary-content">
+        <div class="gallary-content-text_big">Механизированная штукатурка стен от 250 р/м2</div>
+        <div class="gallary-content-text_small">Качественная механизированная шуткатурка в новостройках, домах,
+          помещениях, зданиях и квартирах.</div>
+      </div>
+    </div>
+    <div class="gallary-drops">
+      <div class="gallary-drops-item"></div>
+      <div class="gallary-drops-item"></div>
+      <div class="gallary-drops-item-active"></div>
+    </div>
+    <div class="numbers">
+      <div class="title">
+        <div class="title-text_big">Мы в цифрах</div>
+        <div class="title-text_small">После работы нашей компании было выполнено огромное <br> количество проектов ниже
+          цифры
+          наших достижений</div>
+      </div>
+      <div class="cards">
+        <div class="cards-item">
+          <div class="cards-item-text_big">177</div>
+          <div class="cards-item-text_small">Завершенных проектов</div>
+        </div>
+        <div class="cards-item">
+          <div class="cards-item-text_big">130</div>
+          <div class="cards-item-text_small">Построенных зданий</div>
+        </div>
+        <div class="cards-item">
+          <div class="cards-item-text_big">6</div>
+          <div class="cards-item-text_small">Лет надежной работы</div>
+        </div>
+        <div class="cards-item">
+          <div class="cards-item-text_big">200+</div>
+          <div class="cards-item-text_small">Сотрудников в компании</div>
+        </div>
+      </div>
+    </div>
+    <div class="advantages">
+      <div class="title">
+        <div class="title-text_big">Преимущества механизированной <br> штукатурки</div>
+        <div class="title-text_small">Рассчитайте стоимость механизированной штукатурки <br> в новостройках, домах,
+          помещениях, зданиях и <br> квартирах.</div>
+      </div>
+      <div class="cards">
+        <div class="cards-item">
+          <div class="cards-item-img1"></div>
+          <div class="cards-item-text_big">Выгода во времени</div>
+          <div class="cards-item-text_small">Данная технология намного быстрее, чем традиционные методы штукатурки</div>
+        </div>
+        <div class="cards-item">
+          <div class="cards-item-img2"></div>
+          <div class="cards-item-text_big">Высокое качество</div>
+          <div class="cards-item-text_small">Стены готовы под оклейку обоями и нанесение декоративной штукатурки</div>
+        </div>
+        <div class="cards-item">
+          <div class="cards-item-img3"></div>
+          <div class="cards-item-text_big">Низкий бюджет</div>
+          <div class="cards-item-text_small">Это не только быстро и качествеено, но и значительно дешевле!</div>
+        </div>
+        <div class="cards-item">
+          <div class="cards-item-img4"></div>
+          <div class="cards-item-text_big">Результат</div>
+          <div class="cards-item-text_small">Все работы проводятся с высокой точностью и позволяют получить наилучший
+            результат</div>
+        </div>
+      </div>
+    </div>
+    <div class="video_review">
+      <div class="title">
+        <div class="title-text_big">Видео обзор штукатурных работ</div>
+        <div class="title-text_small">Посмотрите видео-обзор штукатурных работ от <br> специалистов компании
+          “Штукатурки.net”</div>
+      </div>
+      <div class="review">
+        <div class="video"></div>
+        <div class="description">
+          <div class="description-title">Видео обзор штукатурных работ механизированным способом</div>
+          <div class="description-text">В этом видео показан краткий обзор проведения штукатурных работ механизированным
+            способом с использованием современного оборудования и высококачественных материалов</div>
+          <div class="description-link"><a href="#">Подробнее</a></div>
+        </div>
+      </div>
+    </div>
+    <div class="cost_comparison">
+      <div class="title">
+        <div class="title-text_big">Сравнение стоимости и качества <br> штукатурных работ</div>
+        <div class="title-text_small">Мы используем только качественные материалы для <br> механизированной штукатурки
+        </div>
+      </div>
+      <div class="cards">
+        <div class="cards-item">
+          <div class="cards-item-img1"></div>
+          <div class="cards-item-text_big">СНиП “Простая” штукатурка</div>
+          <div class="cards-item-text_small">от 250 ₽/м2</div>
+        </div>
+        <div class="cards-item">
+          <div class="cards-item-img2"></div>
+          <div class="cards-item-text_big">СНиП “Улучшенная” штукатурка</div>
+          <div class="cards-item-text_small">от 300 ₽/м2</div>
+        </div>
+        <div class="cards-item">
+          <div class="cards-item-img3"></div>
+          <div class="cards-item-text_big">СНиП “Высококачественная” штукатурка</div>
+          <div class="cards-item-text_small">от 350 ₽/м2</div>
+        </div>
+      </div>
+      <div class="title_small">Что входит в стоимость штукатурных работ?</div>
+      <div class="list">
+        <div class="list-item">
+          <ul class="list-item-ls">
+            <li>Грунтование стен</li>
+            <li>Нанесение штукатурной смеси</li>
+            <li>Выравнивание штукатурки под правило</li>
+          </ul>
+          <div class="list-item-link"><a href="#">Подробнее</a></div>
+        </div>
+        <div class="list-item">
+          <ul class="list-item-ls">
+            <li>Грунтование стен</li>
+            <li>Установка штукатурных маяков</li>
+            <li>Нанесение штукатурной смеси</li>
+            <li>Удаление штукатурных маяков</li>
+            <li>Выравнивание штукатурки под правило</li>
+          </ul>
+          <div class="list-item-link"><a href="#">Подробнее</a></div>
+        </div>
+        <div class="list-item">
+          <ul class="list-item-ls">
+            <li>Грунтование стен</li>
+            <li>Монтаж сетки в местах разнородных материалов</li>
+            <li>Установка штукатурных маяков</li>
+            <li>Нанесение штукатурной смеси</li>
+            <li>Удаление штукатурных маяков</li>
+            <li>Выравнивание штукатурки под правило</li>
+            <li>Глянцевание поверхности</li>
+            <li>Заглаживание поверхности (шпатлевание)</li>
+          </ul>
+          <div class="list-item-link"><a href="#">Подробнее</a></div>
+        </div>
+      </div>
+    </div>
+    <div class="our_works">
+      <div class="title">
+        <div class="title-text_big">Наши работы</div>
+        <div class="title-text_small">Примеры механизированных штукатурных работ <br> выполненные нашей компанией</div>
+      </div>
+      <div class="our_works-gallary">
+        <div class="our_works-gallary-img">
+          <div class="our_works-gallary-img-left"></div>
+          <div class="our_works-gallary-img-right"></div>
+        </div>
+        <div class="our_works-gallary-carousel">
+          <div class="our_works-gallary-carousel-img1"></div>
+          <div class="our_works-gallary-carousel-img2"></div>
+        </div>
       </div>
     </div>
   </div>
 </body>
+
 </html>
