--- a/src/index.html
+++ b/src/index.html
@@ -199,6 +199,20 @@
         </div>
       </div>
     </div>
+    <div class="consultations">
+      <div class="side-wrapper">
+        <div class="left_side">
+          <div class="left_side-text_big">Получи бесплатную консультацию</div>
+          <div class="left_side-text_small">Просто оставьте свои контактные данные и наши специалисты проконсультируют
+            вас по любому вопросу</div>
+        </div>
+        <div class="right_side">
+          <input type="text" placeholder="Ваше имя">
+          <input type="tel" placeholder="+7 (999) 999 99 99">
+        </div>
+      </div>
+
+    </div>
   </div>
 </body>
 
