--- a/src/index.html
+++ b/src/index.html
@@ -209,9 +209,69 @@
         <div class="right_side">
           <input type="text" placeholder="Ваше имя">
           <input type="tel" placeholder="+7 (999) 999 99 99">
+          <div class="button_send">
+            Отправить
+          </div>
+          <div class="processing_personal_data">
+            Отправляя заявку вы даете согласие на <span>обработку своих персональных данных</span>
+          </div>
+
         </div>
       </div>
 
+    </div>
+    <div class="used_materials">
+      <div class="title">
+        <div class="title-text_big">Используемые материалы</div>
+        <div class="title-text_small">Вы можете ознакомиться с материалами которые мы <br> используем в своей работе
+        </div>
+      </div>
+      <div class="used_materials-cards">
+        <div class="card">
+          <div class="card-img"></div>
+          <div class="card-title">Штукатурка</div>
+          <div class="card-text">Мы используем только качественные материалы</div>
+          <div class="card-link">Подробнее</div>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <div class="card-title">Штукатурка</div>
+          <div class="card-text">Мы используем только качественные материалы</div>
+          <div class="card-link">Подробнее</div>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <div class="card-title">Штукатурка</div>
+          <div class="card-text">Мы используем только качественные материалы</div>
+          <div class="card-link">Подробнее</div>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <div class="card-title">Штукатурка</div>
+          <div class="card-text">Мы используем только качественные материалы</div>
+          <div class="card-link">Подробнее</div>
+        </div>
+      </div>
+      <div class="used_materials-pag">
+        <div class="left_arrow"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot_active"></div>
+        <div class="right_arrow"></div>
+      </div>
+    </div>
+    <div class="machine_plastering">
+      <div class="title">
+        <div class="title-text_big">Процесс оштукатуривания машинным <br> способом</div>
+        <div class="title-text_small">Наглядно показываем материалами Процесс <br> оштукатуривания машинным способом</div>
+      </div>
+      <div class="machine_plastering-cards">
+        <div class="card">
+          <div class="card-number">1.</div>
+          <div class="card-img"></div>
+          <div class="card-text">СНиП “Простая” штукатурка</div>
+        </div>
+      </div>
     </div>
   </div>
 </body>
